# torq

./: .gitignore  .tauri-dev.err  .tauri-dev.out  ARCHITECTURE.md  Cargo.toml  README.md  SECURITY.md  package.json
.github/workflows/: ci.yml
crates/torq-core/: Cargo.toml
crates/torq-core/src/: error.rs  lib.rs
crates/torq-runtime/: Cargo.toml
crates/torq-runtime/src/: config.rs  control.rs  lib.rs  log_parser.rs  logs.rs  main.rs  manager.rs  process.rs  runtime_events.rs  runtime_state.rs  state.rs
crates/torq-runtime/src/manager/: bootstrap.rs  mod.rs  state_store.rs  supervisor.rs  tests.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: runtime-config-form.ts  runtime-config.ts  runtime-feedback.ts  status.ts  torq-api.ts
frontend/src/lib/components/: ActivityPanel.svelte  AppHeader.svelte  Card.svelte  RuntimeDetailsPanel.svelte  RuntimeOverviewPanel.svelte  SettingsPanel.svelte  ShellNotes.svelte  StatusBadge.svelte
scripts/: mock-tor.cmd
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config_store.rs  lib.rs  main.rs  runtime_config.rs
src-tauri/src/desktop_shell/: activity.rs  bootstrap.rs  commands.rs  config_store.rs  event_bridge.rs  mod.rs  state.rs  views.rs
